Solve the overlapping problem of side menu and web content

--- a/P1-Style_Guide_Template-4/css/main.css
+++ b/P1-Style_Guide_Template-4/css/main.css
@@ -13,6 +13,7 @@
     font-family: 'PT Sans', Helvetica, sans-serif;
     letter-spacing: 0.015em;
   }
+
   li,a {
     text-decoration: none;
   }
@@ -60,6 +61,7 @@
       background: #e8e8e8;
     }
     .menu{
+      z-index: 1;
       position: fixed;
       width: 100%;
       height: 100vh;
@@ -367,6 +369,9 @@ address{
 
 .quantity {
   position: relative;
+}
+input, textarea {
+  background-color : #fff;
 }
 
 input[type=number]::-webkit-inner-spin-button,
